using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Animation_Tag : MonoBehaviour
{
    public const string MOVEMENT = "MoveMent";

    public const string PUNCH_1_TRIGGER = "punch1";
    public const string PUNCH_2_TRIGGER = "punch2";
    public const string PUNCH_3_TRIGGER = "punch3";

    public const string KICK_1_TRIGGER = "kick1";
    public const string KICK_2_TRIGGER = "kick2";

    public const string ATTACK_1_TRIGGER = "Attack1";
    public const string ATTACK_2_TRIGGER = "Attack2";
    public const string ATTACK_3_TRIGGER = "Attack3";

    public const string IDLE_ANIMATION = "Idle";

    public const string KNOCK_DOWN_TRIGGER = "KnockDown";
    public const string STANT_UP_TRIGGER = "StandUp";
    public const string HIT_TRIGGER = "Hit";
    public const string DEATH_TRIGGER = "Death";
}



